--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,16 +1,12 @@
 html, body {
   height: 100%;
   margin: 0;
-  /*background-color: black !important; !*TODO Does not work*!*/
 }
 
-
-/*TODO evaluieren, zB ob auch mit gray background gut aussieht*/
 .register-container {
   /*border: 1px solid green;*/
   border-radius: 10px;
   background-color: white;
-
   width: 370px;
   height: 640px;
   display: flex;
@@ -19,19 +15,16 @@ html, body {
   flex-direction: column;
   justify-content: flex-start;
   padding: 0 var(--dl-space-space-unit);
-
 }
 
 .register-image-container {
   width: 100%;
-  /*padding: 0 var(--dl-space-space-unit);*/
   margin-top: var(--dl-space-space-unit);
   margin-bottom: var(--dl-space-space-twounits)
 }
 
 .register-component-form {
   /*border: 1px solid red;*/
-
   width: 100%;
   height: 100%;
   display: flex;
@@ -69,14 +62,14 @@ html, body {
   .register-container {
     width: 95%;
     height: auto;
-    padding: 0;
+    padding: var(--dl-space-space-halfunit);
   }
 
   .small-form-field {
     width: 90vw !important;
   }
 
-  .main-register-container{
+  .main-register-container {
     display: flex;
     align-items: center;
     justify-content: center;
